--- a/styles/_mediaqueries.scss
+++ b/styles/_mediaqueries.scss
@@ -170,10 +170,8 @@
                     font-size: 18px;
                 }
 
-                p {
-                    font-size: 16px;
-                    margin-top: 7px;
-                    margin-bottom: 37px;
+                #reactions {
+                    width: 500px;
                 }
 
                 
